spade-tests/src/snapshots/spade_tests__typeinference__field_based_type_inference_works.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type int<32>, got bool
  ┌─ testinput:5:22
  │
5 │     let a: int<32> = A(true).x;
  │                      ^^^^^^^^^ Expected int<32> here


